@@ -2,6 +2,8 @@ Revision history for DBIx::Class
 
         - When adding relationships, it will throw an exception if you get the
           foreign and self parts the wrong way round in the condition
+        - ResultSetColumn::func() now returns all results if called in list
+          context; this makes things like func('DISTINCT') work as expected
 
 0.08007 2007-09-04 19:36:00
         - patch for Oracle datetime inflation (abram@arin.net)
